# Quant

./: .gitignore  README.md  init.sh  launch_dashboards.sh
Algorithms/Algos/Python/Sorts/InsertionSort/: insertion_sort.py
Algorithms/Algos/Python/Sorts/InsertionSort/inputs/: input_int_2.csv
Algorithms/Algos/Sorts/InsertionSort/: insertion_sort.py
Algorithms/Python/Algos/Sorts/InsertionSort/: insertion_sort.py
Algorithms/Python/Algos/Sorts/InsertionSort/inputs/: input_int_1.csv
Algorithms/Python/Utils/Logging/: logger.py
Algorithms/Python/Utils/Tests/: cli_args.py  generic_test_run.py  input_enumerate.py
Algorithms/Utils/Lists/: list_utils.py
Algorithms/Utils/Logging/: logger.py
Algorithms/Utils/Tests/: generic_test_run.py  input_enumerate.py  tests_logging.py
Dashboards/DashboardAlgorithms/: app.R  launch.R
Dashboards/DashboardAlgorithms/source/: UI.R  server.R
Dashboards/MainDashboard/: app.py  launch_main_dashboard.sh
Dashboards/TestDashboard/: app.R  launch.R
Dashboards/TestDashboard/source/: UI.R  server.R
Dashboards/Utils/PlotLog/: get_plot_logs.R  plot_log_data_step.R
Data/DataGeneration/LinearData/: generate_linear_data.R
Trading/: CMakeLists.txt
Trading/src/: main.cpp
Trading/src/Agents/: Agent.cpp  Agent.hpp  AgentIdentity.cpp  AgentIdentity.hpp  AgentRole.cpp  AgentRole.hpp  Agents.rmd
Trading/src/Environment/: MarketBuilder.cpp  MarketBuilder.hpp
Trading/src/Markets/: Market.cpp  Market.hpp  MarketTypes.cpp  MarketTypes.hpp  MarketUtils.cpp  MarketUtils.hpp  markets.rmd
Trading/src/Products/: Product.cpp  Product.hpp
Trading/src/Products/Contracts/Options/: CallEuropean.cpp  CallEuropean.hpp  Option.cpp  Option.hpp
Trading/src/Products/Options/: Option.hpp  OptionCall.cpp  OptionCall.hpp
